# romeo-gpt

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
owl_vectores/: __init__.py  app.py  config.py  database.py  models.py  preprocess.py  utils.py
owl_vectores/api/: __init__.py
owl_vectores/api/endpoints/: ask_question.py  upload_files.py
owl_vectores/app/: __init__.py  main.py
owl_vectores/utils/agents/: prompt_template.py
owl_vectores/utils/connectors/: __init__.py  extract_docx.py  extract_pdf.py  extract_txt.py
romeo_gpt/: __init__.py  database.py  models.py  preprocess.py
romeo_gpt/api/: __init__.py
romeo_gpt/api/endpoints/: __init__.py  ask_question.py  create_task.py  google_endpoint.py  upload_files.py
romeo_gpt/app/: __init__.py  main.py
romeo_gpt/utils/agents/: docs_agent.py  google_agent.py  prompt_template.py
romeo_gpt/utils/connectors/: __init__.py  extract_docx.py  extract_pdf.py  extract_txt.py
romeo_gpt/utils/database/: __init__.py  create_index.py  database.py  db_utils.py  search_index.py
romeo_gpt/utils/database/mongodb/: __init__.py
romeo_gpt/utils/database/redis/: __init__.py  create_index.py  database.py  search_index.py
romeo_gpt/utils/models/: __init__.py
tests/: test_app.py  test_database.py
