[tool.poetry]
name = "owl-vectores"
version = "0.1.0"
description = ""
authors = ["felipe.manrique <pmanrique001@gmail.com>"]
readme = "README.md"
packages = [{include = "owl_vectores"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
redis = "^4.5.4"
black = "^23.3.0"
pytest = "^7.3.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
